kubernetes/yamlfiles/ingress/web-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: web-ingress-service
spec:
 selector:
  app: web-ingress
 ports:
  - port: 80
    targetPort: 80
 type: ClusterIP
