kubernetes/yamlfiles/ingress/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: web-ingress
spec:
 ingressClassName: nginx
 rules:
  - host: web-ingress.local
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service: 
          name: web-ingress-service
          port:
           number: 80
